@@ -13,3 +13,4 @@ inc/
 lib/DBIx/Class/Optional/Dependencies.pod
 pm_to_blib
 t/var/
+.*.sw?
